--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,7 @@
     <title>
         Mobile First Responsive Art News Landing Page
     </title>
-    <link rel="icon" href="GMMpgdl.png" type="image/x-icon">
+    <link rel="icon" href="images/Mobilefirst-logo.png" type="image/x-icon">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Learn about News realted to upcoming art trends">
@@ -14,10 +14,10 @@
     <meta name="robots" content="index, follow">
     <meta property="og:title" content="Mobile First Responsive Art News Landing Page">
     <meta property="og:description" content="Learn about News realted to upcoming art trends">
-    <meta property="og:image" content="KBD7w8k.png">
+    <meta property="og:image" content="images/Mobile-first-website.png">
     <meta name="twitter:title" content="Mobile First Responsive Art News Landing Page">
     <meta name="twitter:description" content="Learn about News realted to upcoming art trends">
-    <meta name="twitter:image" content="KBD7w8k.png">
+    <meta name="twitter:image" content="images/Mobile-first-website.png">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
